*Important*: be aware of overriding total request size (e.g. header size or multipart parts) in your environment in case of using custom settings (e.g. in custom application.yml or through JVM arguments).
The recommended values are: max-part-header-size: 768; max-part-count: 100.
See bug:MID-10748[].
* Fixed the possibility to modify the filter in the marking rule. See bug:MID-10405[].

== Changes with Respect To Version 4.9.2

* Improved the mechanism for association deltas processing. See bug:MID-10588[].
* Fixed the visibility of the "Remove" password button on the Credentials panel in case of the missing authorization for this action.  See bug:MID-10507[].
* Fixed a computation of the shadow items while their retrieving.  See bug:MID-10585[].
* Improved the time of the resource accounts loading by excluding reference attributes and associations processing. See bug:MID-10444[].
* Fixed the presentation of the newly assigned account on the Self Service Credentials page. See bug:MID-10544[].
* Improved the documentation for access certification authorizations. See bug:MID-10627[].
* Fixed the report import process in case the data contains a referencable object with null value. See bug:MID-10503[].
* Fixed refreshing of the correlation rules table. See bug:MID-10478[].
* Fixed NPE while opening accounts table on the resource page. See bug:MID-10535[].
* Clustering attributes configuration was improved within Role Analysis feature.
* Upgraded Spring Boot to version 3.3.11.
* Upgraded Spring Security to version 6.4.9.
* In case you are using a separate database for audit, please, ensure, that _ObjectType_ enum contains '_SCHEMA_' value.
Within the audit schema, you can simply run the following SQL command to add the missing value.
For more information, please, refer to the bug:[MID-10437].

    ALTER TYPE ObjectType ADD VALUE IF NOT EXISTS 'SCHEMA' AFTER 'ROLE_ANALYSIS_OUTLIER';

== Changes with Respect To Version 4.9.1
