@@ -82,6 +82,7 @@
             <class name="com.evolveum.midpoint.model.intest.rbac.TestAssignmentValidity"/>
             <class name="com.evolveum.midpoint.model.intest.rbac.TestMetaMeta"/>
             <class name="com.evolveum.midpoint.model.intest.rbac.TestAutoassign"/>
+            <class name="com.evolveum.midpoint.model.intest.rbac.TestGlobalPolicyActivation"/>
             <class name="com.evolveum.midpoint.model.intest.TestRaceConditions"/>
             <class name="com.evolveum.midpoint.model.intest.TestNotifications"/>
             <class name="com.evolveum.midpoint.model.intest.persona.TestPersona"/>
